# stm32u5_custom_pcb_fw_zephyr

./: CMakeLists.txt  README.md  ZephyrAppConfig.cmake  plan_add_mcuboot.md  prj.conf  sysbuild.conf
boards/kkong/edgeaiproto/: Kconfig.defconfig  Kconfig.edgeaiproto  board.yml  edgeaiproto.dts  edgeaiproto.overlay  edgeaiproto.overlay_backup  edgeaiproto_defconfig
boards/kkong/edgeaiproto/doc/: index.rst
cmake/: generate_build_version.cmake
docs/: CPU_OPTIMIZATION_PROPOSAL.md  PERSON_DETECTION_MODELS.md  RAM_STUDY_DOUBLE_BUFFER.md  SMP_UART_UPGRADE.md
include/: app_version.h
modules/stm32u5_dcmi/: Kconfig  README.md
modules/stm32u5_dcmi/dts/bindings/video/: st,stm32u5-dcmi.yaml
modules/stm32u5_dcmi/zephyr/: CMakeLists.txt  Kconfig  module.yml  video_stm32u5_dcmi.c
src/: main.c
src/tflm_hello_world/: assert.cpp  constants.c  constants.h  main_functions.cpp  main_functions.h  model.hpp  model_settings.c  model_settings.h  output_handler.cpp  output_handler.hpp  person_detect_model_data.c  person_detect_model_data.hpp
sysbuild/: mcuboot.conf
tools/: fw_upload_gui.py
tools/fw_upload_gui/: fw_upload_gui.bat  fw_upload_gui.py
